--- a/index.html
+++ b/index.html
@@ -16,34 +16,43 @@
                 <td><input type="text" id="display"></td>
             </tr>
             <tr>
+                    <td>
+                        <button id="7" onclick="display(7)">%</button>
+                        <button id="8" onclick="reset()">C</button>
+                        <button id="9" onclick="display(9)"><</button>
+                        <button id="mas" onclick="sumar()">+</button>
+                    </td>
+                </tr>
+            <tr>
                 <td>
-                    <button id="7">7</button>
-                    <button id="8">8</button>
-                    <button id="9">9</button>
-                    <button id="mas">+</button>
+                    <button id="7" onclick="display(7)">7</button>
+                    <button id="8" onclick="display(8)">8</button>
+                    <button id="9" onclick="display(9)">9</button>
+                    <button id="menos" onclick="restar()">-</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button id="4">4</button>
-                    <button id="5">5</button>
-                    <button id="6">6</button>
-                    <button id="menos">-</button>
+                    <button id="4" onclick="display(4)">4</button>
+                    <button id="5" onclick="display(5)">5</button>
+                    <button id="6" onclick="display(6)">6</button>
+                    <button id="por" onclick="display('*')">*</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button id="1">1</button>
-                    <button id="2">2</button>
-                    <button id="3">3</button>
-                    <button id="por">*</button>
+                    <button id="1" onclick="display(1)">1</button>
+                    <button id="2" onclick="display(2)">2</button>
+                    <button id="3" onclick="display(3)">3</button>
+                    <button id="divi" onclick="display('/')">/</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button id="0">0</button>
-                    <button id="igual" class="igual">=</button>
-                    <button id="divi">/</button>
+                    <button id="masMenos">+-</button>
+                    <button id="0" onclick="display(0)">0</button>
+                    <button id="puto">,</button>
+                    <button id="igual" class="igual" onclick="igual()">=</button>
                 </td>
             </tr>
         </table>
