--- a/index.html
+++ b/index.html
@@ -17,47 +17,42 @@
             </tr>
             <tr>
                     <td>
-                        <button id="porcentaje"   onclick="display(7)">%</button>
-                        <button id="8" onclick="reset()">C</button>
-                        <button id="f"  onclick="display(9)"><</button>
-                        <button id="mas" onclick="sumar()">+</button>
-                    </td> 
+                        <button data-sign="percentage">%</button>
+                        <button data-sign="reset">C</button>
+                        <button data-sign="erase"><</button>
+                        <button data-sign="add">+</button>
+                    </td>
                 </tr>
             <tr>
                 <td>
-                    <button data-number="7" >7</button>
-                    <button data-number="8" >8</button>
-                    <button data-number="9" >9</button>
-                    <button id="menos" onclick="restar()">-</button>
+                    <button data-number="7" class="number" >7</button>
+                    <button data-number="8" class="number" >8</button>
+                    <button data-number="9" class="number" >9</button>
+                    <button data-sign="subtract">-</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button id="number4" data-number="4" >4</button>
-                    <button data-number="5" >5</button>
-                    <button data-number="6" >6</button>
-                    <button id="por" onclick="display('*')">*</button>
+                    <button data-number="4" class="number" >4</button>
+                    <button data-number="5" class="number" >5</button>
+                    <button data-number="6" class="number" >6</button>
+                    <button data-sign="multiply">*</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button data-number="1" >1</button>
-                    <button data-number="2" >2</button>
-                    <button data-number="3" >3</button>
-                    <button id="divi" onclick="display('/')">/</button>
+                    <button data-number="1" class="number" >1</button>
+                    <button data-number="2" class="number" >2</button>
+                    <button data-number="3" class="number" >3</button>
+                    <button data-sign="div">/</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button id="masMenos">+-</button>
-                    <button data-number="0" >0</button>
-                    <button id="puto">,</button>
-                    <button id="igual" class="igual" onclick="igual()">=</button>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <button id="test" data-number="66">66</button>
+                    <button data-sign="addSub">+-</button>
+                    <button data-number="0" class="number">0</button>
+                    <button data-number=".">,</button>
+                    <button data-sign="equal">=</button>
                 </td>
             </tr>
         </table>
