--- a/index.html
+++ b/index.html
@@ -6,15 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="style.css">
     
-    <title>Calculadora</title>
+    <title>The Calculator</title>
 </head>
 <body>
-    <h1>Hola calculadora</h1>
+    <h1>The Calculator</h1>
     <div class="frame">
+            <input type="text" id="display">
         <table>
-            <tr>
-                <td><input type="text" id="display"></td>
-            </tr>
+        
             <tr>
                     <td>
                         <button data-sign="percentage">%</button>
@@ -25,25 +24,25 @@
                 </tr>
             <tr>
                 <td>
-                    <button data-number="7" class="number" >7</button>
-                    <button data-number="8" class="number" >8</button>
-                    <button data-number="9" class="number" >9</button>
+                    <button data-number="7">7</button>
+                    <button data-number="8">8</button>
+                    <button data-number="9">9</button>
                     <button data-sign="subtract">-</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button data-number="4" class="number" >4</button>
-                    <button data-number="5" class="number" >5</button>
-                    <button data-number="6" class="number" >6</button>
+                    <button data-number="4">4</button>
+                    <button data-number="5">5</button>
+                    <button data-number="6">6</button>
                     <button data-sign="multiply">*</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button data-number="1" class="number" >1</button>
-                    <button data-number="2" class="number" >2</button>
-                    <button data-number="3" class="number" >3</button>
+                    <button data-number="1">1</button>
+                    <button data-number="2">2</button>
+                    <button data-number="3">3</button>
                     <button data-sign="div">/</button>
                 </td>
             </tr>
