key press effect

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         
             <tr>
                     <td>
-                        <button data-sign="percentage">%</button>
-                        <button data-sign="reset">C</button>
-                        <button data-sign="erase"><</button>
-                        <button data-sign="add">+</button>
+                        <button data-sign="percentage" class="signo">%</button>
+                        <button data-sign="reset" class="signo">C</button>
+                        <button data-sign="erase" class="signo"><</button>
+                        <button data-sign="add" class="signo">+</button>
                     </td>
                 </tr>
             <tr>
@@ -27,7 +27,7 @@
                     <button data-number="7">7</button>
                     <button data-number="8">8</button>
                     <button data-number="9">9</button>
-                    <button data-sign="subtract">-</button>
+                    <button data-sign="subtract" class="signo">-</button>
                 </td>
             </tr>
             <tr>
@@ -35,7 +35,7 @@
                     <button data-number="4">4</button>
                     <button data-number="5">5</button>
                     <button data-number="6">6</button>
-                    <button data-sign="multiply">*</button>
+                    <button data-sign="multiply" class="signo">*</button>
                 </td>
             </tr>
             <tr>
@@ -43,20 +43,19 @@
                     <button data-number="1">1</button>
                     <button data-number="2">2</button>
                     <button data-number="3">3</button>
-                    <button data-sign="div">/</button>
+                    <button data-sign="div" class="signo">/</button>
                 </td>
             </tr>
             <tr>
                 <td>
-                    <button data-sign="addSub">+-</button>
+                    <button data-sign="addSub" class="signo">+-</button>
                     <button data-number="0" class="number">0</button>
-                    <button data-number=".">,</button>
-                    <button data-sign="equal">=</button>
+                    <button data-number="." class="signo">,</button>
+                    <button data-sign="equal" class="signo">=</button>
                 </td>
             </tr>
         </table>
     </div>
-   
     <script src="script.js"></script>
 </body>
 </html>
